# advent_of_code_2024

./: Cargo.toml  README.md  justfile
day01/: Cargo.toml
day01/src/: part1.rs  part2.rs
day01/src/utils/: mod.rs
day02/: Cargo.toml
day02/src/: part1.rs  part2.rs
day03/: Cargo.toml
day03/src/: part1.rs
day04/: Cargo.toml
day04/src/: part1.rs
day05/: Cargo.toml
day05/src/: part1.rs  part2.rs
day06/: Cargo.toml
day06/src/: part1.rs  part2.rs
day07/: Cargo.toml
day07/src/: part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: part1.rs  part2.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
