[package]
name = "day02"
version = "0.0.0"
edition = "2021"

[dependencies]
glam.workspace = true
itertools.workspace = true
nom.workspace = true
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
divan.workspace = true
miette.workspace = true
nom_locate.workspace = true
nom-supreme.workspace = true
test-log.workspace = true
thiserror.workspace = true
derive_more.workspace = true
string-patterns.workspace = true
array2d.workspace = true
